# vk_pocketbook

./: Cargo.toml  Makefile  README.md  upload_ftp.sh
src/: main.rs
src/app/: auth_screen.rs  groups_screen.rs  main_screen.rs  mod.rs  wall_screen.rs
src/ui_engine/: app_context.rs  color.rs  events.rs  geometry.rs  mod.rs  ui_view.rs
src/views/: button_view.rs  geometry.rs  grid_view.rs  image_view.rs  labeled_text_input.rs  log_panel.rs  mod.rs  text_input.rs  text_view.rs
src/vk_api/: api.rs  error.rs  longpoll.rs  macros.rs  mod.rs  session.rs
