[package]
name = "pocketbook_vk"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inkview-sys = {path="/Users/andrey/projects/inkview-sys"}
backtrace = "*"

chrono = "*"
tinybmp = "*"
ureq = {version = "*", features = ["json"]}

serde_json = "*"
#openssl_sys = {features = ["vendored"]}
ring = "*"
rand = "*"
maplit = "*"
num = "*"
serde_derive = "*"
kv = {version = "*", features = ["json-value"]}
serde = "*"